Created basic html template

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <tr>
-      <td><img src="gru-modified.png" alt="Image not found" width="200" height="200"></td>
+      <td><img src="Images/gru-modified.png" alt="Image not found" width="200" height="200"></td>
       <td>
         <h1>Johnny Nguyen</h1>
         <p><em>Engineering and Science Student at <strong><a href="https://www.unsw.edu.au/">UNSW</a></strong></em></p>
@@ -19,8 +19,8 @@
   </table>
   <hr>
   <h3>Education</h3>
-  <p>2021-present UNSW</p>
-  <p>2015-2020 CVHS</p>
+  <p>Something</p>
+  <p>Something</p>
   <hr>
   <a href="Projects.html">Projects</a>
   <a href="Contact.html">Contact Me</a>
