--- a/Contact.html
+++ b/Contact.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <h1>Contact Me</h1>
-    <p>johntin2003@gmail.com</p>
+    <p>notarealemail@email.com</p>
 
-    <form action="mailto:offlinecoding123@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:myactualemail@email.com" method="post" enctype="text/plain">
       <label for="">Your Name:</label>
       <input type="text" name="yourName" id="">
       <br>
