--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,7 @@
     <h1>Contact Me</h1>
     <p>notarealemail@email.com</p>
 
-    <form action="mailto:myactualemail@email.com" method="post" enctype="text/plain">
+    <form action="mailto:notmyactualemail@email.com" method="post" enctype="text/plain">
       <label for="">Your Name:</label>
       <input type="text" name="yourName" id="">
       <br>
